// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. card loading state 1`] = `
<style>
{
  "IS1": {
    "display": "block",
    "position": "absolute",
    "width": "100%",
    "zIndex": 1,
  },
  "IS10": {
    "height": 10,
    "marginBottom": "10px",
  },
  "IS11": {
    "backgroundImage": "linear-gradient(267deg, #F9F9F9 0%, #EDEDED 100%)",
  },
  "IS12": {
    "height": 10,
    "marginBottom": "10px",
  },
  "IS13": {
    "backgroundImage": "linear-gradient(267deg, #F9F9F9 0%, #EDEDED 100%)",
  },
  "IS14": {
    "height": 10,
    "marginBottom": 0,
    "maxWidth": 240,
  },
  "IS2": {
    "backgroundImage": "linear-gradient(264deg, #F9F9F9 0%, #EDEDED 100%)",
  },
  "IS3": {
    "flex": 1,
  },
  "IS4": {
    "bottom": "0px",
    "left": "0px",
    "position": "absolute",
    "right": "0px",
    "top": "0px",
  },
  "IS5": {
    "bottom": 0,
    "left": 0,
    "position": "absolute",
    "right": 0,
    "top": 0,
    "zIndex": 0,
  },
  "IS6": {
    "display": "table",
    "height": 0,
    "overflow": "hidden",
    "paddingBottom": "150%",
  },
  "IS7": {
    "backgroundImage": "linear-gradient(264deg, #F9F9F9 0%, #EDEDED 100%)",
  },
  "IS8": {
    "height": 24,
    "marginBottom": "10px",
    "maxWidth": 300,
  },
  "IS9": {
    "backgroundImage": "linear-gradient(267deg, #F9F9F9 0%, #EDEDED 100%)",
  },
  "S1": {
    "-ms-flex": "1",
    "-ms-flex-align": "stretch",
    "-ms-flex-direction": "column",
    "-webkit-align-items": "stretch",
    "-webkit-box-align": "stretch",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "vertical",
    "-webkit-flex": "1",
    "-webkit-flex-direction": "column",
    "align-items": "stretch",
    "display": "flex",
    "flex": "1",
    "flex-direction": "column",
    "margin-bottom": "0px",
    "min-width": "0px",
  },
  "S10": {
    "-ms-flex-align": "start",
    "-ms-flex-direction": "row",
    "-ms-flex-pack": "end",
    "-ms-flex-wrap": "wrap",
    "-webkit-align-items": "flex-start",
    "-webkit-box-align": "start",
    "-webkit-box-direction": "normal",
    "-webkit-box-lines": "multiple",
    "-webkit-box-orient": "horizontal",
    "-webkit-box-pack": "end",
    "-webkit-flex-direction": "row",
    "-webkit-flex-wrap": "wrap",
    "-webkit-justify-content": "flex-end",
    "align-items": "flex-start",
    "display": "flex",
    "flex-direction": "row",
    "flex-wrap": "wrap",
    "justify-content": "flex-end",
    "margin-bottom": "0px",
    "min-width": "0px",
  },
  "S2": {
    "-ms-flex": "1",
    "-ms-flex-align": "stretch",
    "-ms-flex-direction": "column",
    "-webkit-align-items": "stretch",
    "-webkit-box-align": "stretch",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "vertical",
    "-webkit-flex": "1",
    "-webkit-flex-direction": "column",
    "align-items": "stretch",
    "display": "flex",
    "flex": "1",
    "flex-direction": "column",
    "margin-bottom": "0px",
    "min-width": "0px",
  },
  "S3": {
    "-ms-flex-align": "stretch",
    "-ms-flex-direction": "column",
    "-webkit-align-items": "stretch",
    "-webkit-box-align": "stretch",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "vertical",
    "-webkit-flex-direction": "column",
    "align-items": "stretch",
    "display": "flex",
    "flex-direction": "column",
    "margin-bottom": "0px",
    "min-width": "0px",
  },
  "S4": {
    "-ms-flex": "1",
    "-ms-flex-align": "stretch",
    "-ms-flex-direction": "column",
    "-webkit-align-items": "stretch",
    "-webkit-box-align": "stretch",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "vertical",
    "-webkit-flex": "1",
    "-webkit-flex-direction": "column",
    "align-items": "stretch",
    "display": "flex",
    "flex": "1",
    "flex-direction": "column",
    "margin-bottom": "10px",
    "min-width": "100%",
  },
  "S5": {
    "-ms-flex-align": "stretch",
    "-ms-flex-direction": "column",
    "-webkit-align-items": "stretch",
    "-webkit-box-align": "stretch",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "vertical",
    "-webkit-flex-direction": "column",
    "align-items": "stretch",
    "display": "flex",
    "flex-direction": "column",
    "height": "24px",
    "margin-bottom": "10px",
    "max-width": "300px",
    "min-width": "0px",
  },
  "S6": {
    "-ms-flex-align": "stretch",
    "-ms-flex-direction": "column",
    "-webkit-align-items": "stretch",
    "-webkit-box-align": "stretch",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "vertical",
    "-webkit-flex-direction": "column",
    "align-items": "stretch",
    "display": "flex",
    "flex-direction": "column",
    "height": "10px",
    "margin-bottom": "10px",
    "min-width": "0px",
  },
  "S7": {
    "-ms-flex-align": "stretch",
    "-ms-flex-direction": "column",
    "-webkit-align-items": "stretch",
    "-webkit-box-align": "stretch",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "vertical",
    "-webkit-flex-direction": "column",
    "align-items": "stretch",
    "display": "flex",
    "flex-direction": "column",
    "height": "10px",
    "margin-bottom": "10px",
    "min-width": "0px",
  },
  "S8": {
    "-ms-flex-align": "stretch",
    "-ms-flex-direction": "column",
    "-webkit-align-items": "stretch",
    "-webkit-box-align": "stretch",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "vertical",
    "-webkit-flex-direction": "column",
    "align-items": "stretch",
    "display": "flex",
    "flex-direction": "column",
    "height": "10px",
    "margin-bottom": "0px",
    "max-width": "240px",
    "min-width": "0px",
  },
  "S9": {
    "-ms-flex": "1",
    "-ms-flex-align": "stretch",
    "-ms-flex-direction": "column",
    "-webkit-align-items": "stretch",
    "-webkit-box-align": "stretch",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "vertical",
    "-webkit-flex": "1",
    "-webkit-flex-direction": "column",
    "align-items": "stretch",
    "display": "flex",
    "flex": "1",
    "flex-direction": "column",
    "margin-bottom": "0px",
    "min-width": "100%",
  },
}
</style>

<div
  className="S10"
>
  <div
    className="S4"
  >
    <TimesImage
      aspectRatio={0.6666666666666666}
      uri=""
    />
  </div>
  <div
    className="S9"
  >
    <Gradient
      className="IS8"
      degrees={264}
    />
    <Gradient
      className="IS10"
      degrees={267}
    />
    <Gradient
      className="IS12"
      degrees={267}
    />
    <Gradient
      className="IS14"
      degrees={267}
    />
  </div>
</div>
`;

exports[`2. card with reversed loading state 1`] = `
<style>
{
  "IS1": {
    "backgroundImage": "linear-gradient(264deg, #F9F9F9 0%, #EDEDED 100%)",
  },
  "IS10": {
    "backgroundImage": "linear-gradient(264deg, #F9F9F9 0%, #EDEDED 100%)",
  },
  "IS11": {
    "flex": 1,
  },
  "IS12": {
    "bottom": "0px",
    "left": "0px",
    "position": "absolute",
    "right": "0px",
    "top": "0px",
  },
  "IS13": {
    "bottom": 0,
    "left": 0,
    "position": "absolute",
    "right": 0,
    "top": 0,
    "zIndex": 0,
  },
  "IS14": {
    "display": "table",
    "height": 0,
    "overflow": "hidden",
    "paddingBottom": "150%",
  },
  "IS2": {
    "height": 24,
    "marginBottom": "10px",
    "maxWidth": 300,
  },
  "IS3": {
    "backgroundImage": "linear-gradient(267deg, #F9F9F9 0%, #EDEDED 100%)",
  },
  "IS4": {
    "height": 10,
    "marginBottom": "10px",
  },
  "IS5": {
    "backgroundImage": "linear-gradient(267deg, #F9F9F9 0%, #EDEDED 100%)",
  },
  "IS6": {
    "height": 10,
    "marginBottom": "10px",
  },
  "IS7": {
    "backgroundImage": "linear-gradient(267deg, #F9F9F9 0%, #EDEDED 100%)",
  },
  "IS8": {
    "height": 10,
    "marginBottom": 0,
    "maxWidth": 240,
  },
  "IS9": {
    "display": "block",
    "position": "absolute",
    "width": "100%",
    "zIndex": 1,
  },
  "S1": {
    "-ms-flex-align": "stretch",
    "-ms-flex-direction": "column",
    "-webkit-align-items": "stretch",
    "-webkit-box-align": "stretch",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "vertical",
    "-webkit-flex-direction": "column",
    "align-items": "stretch",
    "display": "flex",
    "flex-direction": "column",
    "height": "24px",
    "margin-bottom": "10px",
    "max-width": "300px",
    "min-width": "0px",
  },
  "S10": {
    "-ms-flex-align": "start",
    "-ms-flex-direction": "row",
    "-ms-flex-pack": "end",
    "-ms-flex-wrap": "wrap",
    "-webkit-align-items": "flex-start",
    "-webkit-box-align": "start",
    "-webkit-box-direction": "normal",
    "-webkit-box-lines": "multiple",
    "-webkit-box-orient": "horizontal",
    "-webkit-box-pack": "end",
    "-webkit-flex-direction": "row",
    "-webkit-flex-wrap": "wrap",
    "-webkit-justify-content": "flex-end",
    "align-items": "flex-start",
    "display": "flex",
    "flex-direction": "row",
    "flex-wrap": "wrap",
    "justify-content": "flex-end",
    "margin-bottom": "0px",
    "min-width": "0px",
  },
  "S2": {
    "-ms-flex-align": "stretch",
    "-ms-flex-direction": "column",
    "-webkit-align-items": "stretch",
    "-webkit-box-align": "stretch",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "vertical",
    "-webkit-flex-direction": "column",
    "align-items": "stretch",
    "display": "flex",
    "flex-direction": "column",
    "height": "10px",
    "margin-bottom": "10px",
    "min-width": "0px",
  },
  "S3": {
    "-ms-flex-align": "stretch",
    "-ms-flex-direction": "column",
    "-webkit-align-items": "stretch",
    "-webkit-box-align": "stretch",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "vertical",
    "-webkit-flex-direction": "column",
    "align-items": "stretch",
    "display": "flex",
    "flex-direction": "column",
    "height": "10px",
    "margin-bottom": "10px",
    "min-width": "0px",
  },
  "S4": {
    "-ms-flex-align": "stretch",
    "-ms-flex-direction": "column",
    "-webkit-align-items": "stretch",
    "-webkit-box-align": "stretch",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "vertical",
    "-webkit-flex-direction": "column",
    "align-items": "stretch",
    "display": "flex",
    "flex-direction": "column",
    "height": "10px",
    "margin-bottom": "0px",
    "max-width": "240px",
    "min-width": "0px",
  },
  "S5": {
    "-ms-flex": "1",
    "-ms-flex-align": "stretch",
    "-ms-flex-direction": "column",
    "-webkit-align-items": "stretch",
    "-webkit-box-align": "stretch",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "vertical",
    "-webkit-flex": "1",
    "-webkit-flex-direction": "column",
    "align-items": "stretch",
    "display": "flex",
    "flex": "1",
    "flex-direction": "column",
    "margin-bottom": "10px",
    "min-width": "100%",
  },
  "S6": {
    "-ms-flex": "1",
    "-ms-flex-align": "stretch",
    "-ms-flex-direction": "column",
    "-webkit-align-items": "stretch",
    "-webkit-box-align": "stretch",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "vertical",
    "-webkit-flex": "1",
    "-webkit-flex-direction": "column",
    "align-items": "stretch",
    "display": "flex",
    "flex": "1",
    "flex-direction": "column",
    "margin-bottom": "0px",
    "min-width": "0px",
  },
  "S7": {
    "-ms-flex": "1",
    "-ms-flex-align": "stretch",
    "-ms-flex-direction": "column",
    "-webkit-align-items": "stretch",
    "-webkit-box-align": "stretch",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "vertical",
    "-webkit-flex": "1",
    "-webkit-flex-direction": "column",
    "align-items": "stretch",
    "display": "flex",
    "flex": "1",
    "flex-direction": "column",
    "margin-bottom": "0px",
    "min-width": "0px",
  },
  "S8": {
    "-ms-flex-align": "stretch",
    "-ms-flex-direction": "column",
    "-webkit-align-items": "stretch",
    "-webkit-box-align": "stretch",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "vertical",
    "-webkit-flex-direction": "column",
    "align-items": "stretch",
    "display": "flex",
    "flex-direction": "column",
    "margin-bottom": "0px",
    "min-width": "0px",
  },
  "S9": {
    "-ms-flex": "1",
    "-ms-flex-align": "stretch",
    "-ms-flex-direction": "column",
    "-webkit-align-items": "stretch",
    "-webkit-box-align": "stretch",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "vertical",
    "-webkit-flex": "1",
    "-webkit-flex-direction": "column",
    "align-items": "stretch",
    "display": "flex",
    "flex": "1",
    "flex-direction": "column",
    "margin-bottom": "0px",
    "min-width": "100%",
  },
}
</style>

<div
  className="S10"
>
  <div
    className="S5"
  >
    <Gradient
      className="IS2"
      degrees={264}
    />
    <Gradient
      className="IS4"
      degrees={267}
    />
    <Gradient
      className="IS6"
      degrees={267}
    />
    <Gradient
      className="IS8"
      degrees={267}
    />
  </div>
  <div
    className="S9"
  >
    <TimesImage
      aspectRatio={0.6666666666666666}
      uri=""
    />
  </div>
</div>
`;
